# edgar-cayce

./: .env.example  Cargo.toml  Dockerfile  PRIVACY_POLICY.md  README.md  TODO.md  deploy.yaml  justfile
docs/: admin-guide.md  user-guide.md
src/: llm.rs  main.rs  state.rs
src/commands/: ask.rs  config.rs  ingest.rs  manage.rs  mod.rs  sources.rs
src/docs/: ingest.rs  mod.rs  types.rs
src/rlm/: citations.rs  exec.rs  mod.rs  prompts.rs  repl.rs
